2012-11-06  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54917
	* target-memory.c (gfc_target_expr_size,gfc_target_interpret_expr):
	Handle BT_CLASS.

2012-10-14  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54784
	* trans-stmt.c (gfc_trans_allocate): Correctly determine the reference
	to the _data component for polymorphic allocation with SOURCE.

2012-09-20  Release Manager

	* GCC 4.7.2 released.

2012-09-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54556
	* resolve.c (resolve_formal_arglist): Allow VALUE arguments
	with implicit_pure.
	(gfc_impure_variable): Don't check gfc_pure such that the
	function also works for gfc_implicit_pure procedures.

2012-09-12  Tobias Burnus  <burnus@net-b.de>

	PR fortran/54225
	PR fortran/53306
	* array.c (match_subscript, gfc_match_array_ref): Fix
	diagnostic of coarray's '*'.

2012-09-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54435
	PR fortran/54443
	* match.c (gfc_match_select_type): Make sure to only access CLASS_DATA
	for BT_CLASS.

2012-09-08  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/54208
	* simplify.c (simplify_bound_dim): Resolve array spec before
	proceeding with simplification.

2012-07-06  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/53732
	* trans-array.c (gfc_add_loop_ss_code): Disable self recursive calls
	handling nested loop(s) if the subscript flag is true.

2012-06-22  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline
	2012-06-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53691
	PR fortran/53685
	* check.c (gfc_calculate_transfer_sizes): Return if
	SIZE= is not constant or source-size cannot be determined.

2012-06-14  Tobias Burnus  <burnus@net-b.de>

	Backport from mainline
	2012-06-04  Tobias Burnus  <burnus@net-b.de>

	PR fortran/50619
	* resolve.c (build_default_init_expr): Don't initialize
	ASSOCIATE names.

2012-06-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/53597
	* decl.c (match_attr_spec): Only mark module variables