@@ -1,3 +1,8 @@
+2012-11-23  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55352
+	* gfortran.dg/namelist_76.f90: New.
+
 2012-11-19  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backported from mainline
