@@ -1,3 +1,9 @@
+2012-11-23  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55352
+	* trans-decl.c (generate_local_decl): Don't warn for explicitly imported
+	but unused module variables which are in a namelist or common block.
+
 2012-11-06  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/54917
